--- a/node_client/.env.example
+++ b/node_client/.env.example
@@ -1,6 +1,2 @@
-DB_HOST=localhost
-DB_USER=user
-DB_PASSWORD=password
-DB_PORT=5432
-DB_NAME=activities_db
 PORT=3001
+DATABASE_URL=postgresql://user:password@localhost:5432/activities_db
