--- a/node_client/package.json
+++ b/node_client/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Backend server for activities management",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
